# dashboard

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: 0001_dashboard.sql
backend/src/: fixtures.rs  main.rs  models.rs
backend/src/controllers/: tasks.rs  users.rs
backend/src/fixtures/: tasks.rs  users.rs
backend/src/models/: tasks.rs  users.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  tailwind.config.js
frontend/src/: global.css  root.tsx
frontend/src/components/buttons/task-menu/: task-menu.tsx
frontend/src/components/task-column/: task-column.tsx
frontend/src/components/task-container/: task-container.tsx
frontend/src/layouts/header/: header.tsx
frontend/src/layouts/navbar/: navbar.tsx
frontend/src/routes/: index.tsx  layout.tsx
frontend/src/routes/login/: index.tsx
frontend/src/routes/music/: index.tsx
frontend/src/routes/task/: index.tsx
frontend/src/routes/task/[id]/: index.tsx
postgres_db/: postmaster.pid
postgres_db/base/1/: 2619  2840
postgres_db/base/16662/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13393  13393_fsm  13393_vm  13398  13398_fsm  13398_vm  13402  13403  13403_fsm  13403_vm  13407  13408  13408_fsm  13408_vm  13412  17208  17213  17214  174  175  2187  2224  2224_vm  2228  2337  25637  (+217 more)
postgres_db/base/5/: 2619  pg_internal.init
postgres_db/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
postgres_db/pg_xact/: 0000
