[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = {version = "1.30.0", features = ["full"]}
serde = {version = "1.0.183", features = ["derive"]}
anyhow = "1.0.72"
sqlx = {version = "0.7.1", features = ["runtime-tokio-native-tls", "json", "postgres", "chrono"]}
serde_json = "1.0.104"
chrono = {version = "0.4", features = ["serde"]}
